--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>AuraMixer</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="dark"></div>
     <script type="module" src="/main.tsx"></script>
   </body>
 </html>
